--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 title: Elliot Vanegue
 description: Blog de Elliot Vanegue
 keywords: Elliot, Vanegue, développeur
-baseurl:  /homepage # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
-url: https://elliot.vanegue.github.io/homepage  # url should be 'http://<github_username>.github.io/homepage' as before
+baseurl:  / # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
+url: https://agoryu.github.io/elliot.vanegue.github.io/  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
 img_path: /Jalpc/static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
