--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: Java/J2EE, Primefaces, Javascript, ReactJS, AngularJS, Elixir, Phoenix, Unity3D, Godot
-percentage: 80, 80, 50, 20, 20, 30, 30, 50, 50
+aspects: Java/J2EE, Primefaces, Javascript, ReactJS, AngularJS, Elixir, Phoenix, Unity3D, Godot, Latex, C++
+percentage: 80, 80, 50, 20, 20, 30, 30, 50, 50, 50, 40
