modification de la description

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:  # change following line to your infomation.
     - name: fa-linux
     - name: icon-nodejs
   #desc: Ingénieur en développement informatique, j'aime découvrir de nouvelles technologies à la recherche de performance et de qualité de code. Cette curiosité s'étend à tous les domaines, et je recherche constament des activitées originales à pratiquer comme le maniement de sabre laser.  # Describe yourself.
-  desc: Ingénieur en développement informatique, je recherche dans une équipe une bonne ambiance et de bonnes pratiques dans l'organisation du travail. Mes expériences passées m'ont apporté une bonne autonomie lorsque j'ai travaillé en laboratoire et une bonne organisation en équipe suite à des projets qui se sont réorientés vers de l'agilité.
+  desc: Ingénieur en développement informatique, je porte une attention particulière au bien-être de l'équipe. Mes expériences passées en laboratoire m'ont permis d'avoir une bonne autonomie et ont fait progresser mon esprit critique. 
 
 # comment
 disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
