feat: maj experience

--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -4,7 +4,7 @@
     detail: Nextoo
     i18n: company_a
   desc:
-    detail: Maintenance et réalisation de nouvelles fonctionnalités de la plateforme Fast
+    detail: Maintenance et réalisation de nouvelles APIs
     i18n: company_a_desc
   date:
     detail: Aout. 2023
